bk_ida/gccida/g1/gen_formal_parameter_die
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_formal_parameter_die/src/dwarf2out.c:10459:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_formal_parameter_die/src/dwarf2out.c:10460:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_formal_parameter_die/src/dwarf2out.c:10473:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_formal_parameter_die/src/dwarf2out.c:10490:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 10025, "gen_formal_parameter_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_formal_parameter_die/src/dwarf2out.c:10532:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9459, "add_abstract_origin_attribute"); 
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_formal_parameter_die/src/obj/dwarf2out.o] Error 1
